# CPP_instance

./: README.md
YOLOv8-ONNXRuntime-CPP/: CMakeLists.txt
hello/: CMakeLists.txt  CMakeLists_backup.txt  main.cpp
infer_onnx/: CMakeLists.txt  main.cpp
load_onnx/: CMakeLists.txt  main.cpp
opencv/: CMakeLists.txt  main.cpp
